v11/fixtures/ast/errors/type_qualified_method_call/source.able
import pkgmethods.*

inst := Widget.make(7)
inst.augment(1)
